<resources>
    <string name="app_name">微位置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_registration">注册</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_offline">离线地图</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_control">控制</string>
    <string name="inputSubscription">输入您的手机号码：</string>
    <string name="login">登录</string>
    <string name="registration">注册</string>
    <string name="changingpasword">正在更改密码</string>
    <string name="updateapp">手动更新应用</string>
    <string name="helpapp">使用指南</string>
    <string name="subscription">手机号码</string>
    <string name="nickname">昵称：</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="weight">体重：</string>
    <string name="height">身高：</string>
    <string name="email">邮箱：</string>
    <string name="password">密码：</string>
    <string name="password1">再次输入密码：</string>
    <string name="verificationcode">验证码：</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="offlinemap">离线地图</string>
    <string name="active">开始分享位置</string>
    <string name="operation">操作</string>
    <string name="delete">删除活动</string>
    <string name="unactive">停止分享位置</string>
    <string name="groupchat">群聊</string>
    <string name="creategroupchat">创建群</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="activefailmessage">请先结束已经开始的活动</string>
    <string name="cancel">取消</string>
    <string name="fetchverifycode">获取验证码</string>
    <string name="refetchverifycode">(%ds)后重新获取</string>
    <string name="changepasswordsuccessgotologin">修改成功去登陆</string>
    <string name="registrationsuccessgotologin">注册成功去登陆</string>
    <string name="subneeded">请填写手机号码！</string>
    <string name="mailneeded">请填写邮箱！</string>
    <string name="weightneeded">请填写体重！</string>
    <string name="heightneeded">请填写身高！</string>
    <string name="nikeneeded">请填写昵称！</string>
    <string name="passwordneeded">请填写密码！</string>
    <string name="password1needed">请确认密码！</string>
    <string name="password1wrong">两次输入的密码不一致！</string>
    <string name="authneeded">请输入验证码！</string>
    <string name="autherror">验证码错误请重新输入！</string>
    <string name="myprofile">我的资料</string>
    <string name="occupation">职业</string>
    <string name="activity">活动</string>
    <string name="members">成员</string>
    <string name="deletemember">删除成员</string>
    <string name="changepassword">找回密码</string>
    <string name="historytrack">历史轨迹</string>
    <string name="addtohx">邀请聊天</string>
    <string name="p2pchat">聊天</string>
    <string name="create_activity">创建活动</string>
    <string name="create_rendezous">创建集合点</string>
    <string name="refresh_activity">刷新</string>
    <string name="buddies">好友</string>
    <string name="add">新建好友</string>
    <string name="importContacts">导入</string>
    <string name="lock_screen">锁屏</string>
    <string name="favor">常用</string>
    <string name="apps">应用程序</string>
    <string name="setting">设置</string>
    <string name="home_screen">主屏幕</string>
    <string name="join">加入活动</string>
    <string name="activity_creator">创建人：</string>
    <string name="query">查询</string>
    <string name="activity_to_join">选择要加入的活动：</string>
    <string name="invite_buddies">邀请好友：</string>
    <string name="invitation">邀请好友</string>
    <string name="select_buddy">选择好友</string>
    <string name="invite">邀请</string>
    <string name="creator_needed">请输入活动创建者！</string>
    <string name="creator_search">创建者手机号</string>
    <string name="activity_name">活动名：</string>
    <string name="notes">姓名：</string>
    <string name="contact">手机号码：</string>
    <string name="comments">描述：</string>
    <string name="add_contact">添加联系人</string>
    <string name="invite_to_activity">邀请加入活动</string>
    <string name="invitation_sent">邀请已发送</string>
    <string name="joinin_sent">加入请求已发送</string>
    <string name="contacts_list">…</string>
    <string name="choose_contact">选择联系人</string>
    <string name="markername">名称</string>
    <string name="markereditable">如许其他人修改集合点的位置</string>
    <string name="invitetoactivity">邀请加入活动</string>
    <string name="selectactivity">选择要加入的活动</string>
    <string name="deletecontact">删除联系人</string>
    <string name="addfriend">加为好友</string>
    <string name="requesthelp">请求帮助!</string>
    <string name="drawbackhelp">撤销请求帮助!</string>
    <string name="genderfemale">女</string>
    <string name="gendermale">男</string>
    <string name="messagesound">音乐</string>
    <string name="messageviber">震动</string>
    <string name="messagenone">无</string>
    <string name="chat_room">聊天室</string>
    <string name="opexit">退出</string>
    <string name="opbakground">后台运行</string>
    <string name="setting_basicinfo">基本信息</string>
    <string name="setting_username">用户名</string>
    <string name="setting_gender">性别</string>
    <string name="setting_selectgender">选择性别</string>
    <string name="setting_weight">体重</string>
    <string name="setting_height">身高</string>
    <string name="setting_birthday">生日</string>
    <string name="setting_email">邮件</string>
    <string name="setting_occupation">职业</string>
    <string name="setting_changepassword">更改密码</string>
    <string name="setting_oldpassword">旧密码</string>
    <string name="setting_newpassword">新密码</string>
    <string name="setting_selectmsgset">消息提示</string>
    <string name="setting_offlinemap">离线地图</string>
    <string name="loginfailtitle">登陆失败</string>
    <string name="loginfailmsg">有以下可能原因:\n 1 用户名和密码错误(请重新输入用户名或密码). \n 2 网络连接失败(请检查网络连接).\n 3 应用bug(请重起应用).\n 4 服务器正在维护或服务器故障(30分钟内恢复).</string>
    <string name="backpressagain">再按一次退出</string>
    <string name="groupnotempty">活动名不能为空!</string>
    <string name="youcanotdelete">你不能删除:</string>
    <string name="youarenottheowner">,\n因为你不是活动的创建者,\n只有创建者有权利删除他创建的活动.</string>
    <string name="youarenottheownerorself">,\n因为你不是活动的创建者或者用户本人,\n只有活动创建者和本人可以删除活动成员.</string>
    <string name="sendverifycodesuccess">验证码已经发送</string>
    <string name="submitverifysuccess">提交验证码成功</string>
 	<string name="fetchcountrylistok">获取国家列表成功</string>
 	<string name="changepasswordfailed">修改密码失败请稍候重试</string>
 	<string name="registrationfailed">注册失败请稍候重试</string>
 	<string name="registrationsucess">注册成功</string>
 	<string name="networlerror">网络不可用</string>
 	<string name="opennetworksetting">打开网络设置</string>
 	<string name="ignoremessage">稍后设置网络</string>
 	<string name="gpsclosed">GPS已经关闭</string>
 	<string name="gpssetting">打开GPS设置</string>
 	<string name="gpssettinglater">稍后设置GPS</string>
 	<string name="startactivitymessage">%1开始分享位置</string>
 	<string name="stopactivitymessage">%1停止分享位置</string>
	<string name="dialog_update_title">更新</string>
	<string name="dialog_update_msg">发现新版本，版本号：</string>
	<string name="dialog_update_msg2">，是否立即更新</string>
	<string name="dialog_update_btnupdate">更新</string>
	<string name="dialog_update_btnnext">下次再说</string>
	<string name="dialog_downloading_msg">正在下载更新。。。</string>
	<string name="dialog_alert_title">警告</string>
	<string name="dialog_downfailed_btndown">重新下载</string>
	<string name="dialog_downfailed_btnnext">以后再说</string>
	<string name="dialog_error_title">错误</string>
	<string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>
	<string name="closeactivityfirst">请停止分享后察看历史记录!</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>_
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="please_wait">请稍候</string>
    <string name="logining">正在努力登录,请稍候……</string>
    <string name="registering">正在努力注册,请稍候……</string>
    <string name="reading_info">正在获取信息,请稍候……</string>
    <string name="title_activity_create_activity">创建活动</string>
    <string name="traffic">路况</string>
    <string name="satelliteview">卫星</string>
    <string name="amapmapview">地图</string>
    <string name="history">记录</string>
    <string name="remove_history">删除记录</string>
    <string name="local_server_safe">"https://192.168.1.103:8443/TeamRadarServer/"</string>
    <string name="local_server">"http://192.168.1.103:8080/TeamRadarServer/"</string>
    <string name="remote_server_safe">"https://teamradar.net:42060/TeamRadarServer/"</string>
    <string name="remote_server">"http://www.teamradar.net/TeamRadarServer/"</string>
    <string name="title_activity_settings">设置</string>
    <string name="text_ack_msg">读取消息</string>
    <string name="text_delivered_msg">转发消息</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音聊天</string>
    <string name="attach_video_call">视频聊天</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">向上划取消发送  </string>
    <string name="release_to_cancel">抬起手指取消发送</string>
    <string name="send_fail">发送失败</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation">删除对话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发?</string>
    <string name="connect_failuer_toast">请检查网络连接后重试</string>
    <string name="network_unavailable">网络连接不可用,请检查网络连接</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">登出</string>
    <string name="button_uploadlog">上传日志</string>
    <string name="prompt">弹出</string>
    <string name="clear_records">清理对话?</string>
    <string name="clear_all_records">清除对话？</string>
    <string name="recording_video">记录视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">语音</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜索</string>
    <string name="network_isnot_available">网络连接不可用</string>
    <string name="recoding_fail">记录失败请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">determine the forwarded to：%1$s ?</string>
    <string name="logout">登出</string>
    <string name="logout_hint">推出但不清理聊天记录, this account can used on next time user login</string>
    <string name="exit_group_hint">the group messages will not be received after exiting the groups</string>
    <string name="dissolution_group_hint">the group will be dismissed after exiting</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">用户已经在其它设备上登陆</string>
    <string name="em_user_remove">用户已经被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息</string>
    <string name="newnotify">收到一条消息</string>
    <string name="shake">摇一摇</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器</string>
    <string name="book_black">黑名单</string>
    <string name="session">对话</string>
    <string name="address_book">地质簿</string>
</resources>